A bunch of visual fixes
* Better adjusting for the top navigation bar links + watch star
** TODO: I'm still not 100% happy with the links but this'll do for now.
* Don't hard-code in avatar dimensions when using SocialProfile avatars, that won't work the way you think it does and it'll just make the avatars look blurry
** Had to ditch some IE8 compatibility code to make this work. Oh well.
** Also swapped avatar size from large (75x75 pixels) to medium (30x30 pixels)
* Show both Echo notifications and alerts in the top bar

Also includes some random coding style tweaks.

This is all tested, though only on MW 1.35 (yes, I had to make two tiny hacks, not present here, to make the code run on 1.35) and only on the "desktop" view.

(cherry picked from commit a787cabdb688492d8675ca4747abaff1fcabf0c2)

--- a/components/main/personalMenu.less
+++ b/components/main/personalMenu.less
@@ -76,17 +76,9 @@ img.userIcon20 {
 		top: 0.3em;
 	}
 
-	.socialprofile-avatar {
-		top: -0.3em;
+	&.socialprofile-avatar {
+		top: -0.2em;
 	}
-}
-
-/* IE8 fixes */
-img.userIcon20 {
-	background-image: url('images/user-icon-20.png');
-	width: 20px;
-	height: 37px;
-	top: 0.3em;
 }
 
 #userIcon20 {
@@ -108,13 +100,17 @@ img.userIcon20 {
 	top: 0.3em;
 	position: relative;
 	margin-right: 1em;
+
+	ul {
+		list-style: none;
+
+		li {
+			display: inline-block;
+		}
+	}
 }
 
-#echoNotifications ul {
-	list-style: none;
-}
-
-.mw-echo-overlay{
+.mw-echo-overlay {
 	position: fixed !important;
 }
 
